link all keywords, and add Prized to the list of keywords.

--- a/templates/Default/rulesreference.en.html.twig
+++ b/templates/Default/rulesreference.en.html.twig
@@ -1010,14 +1010,25 @@
             Instances of Ambush (X) with different values for X are considered different keywords.)
         </li>
         <li> The keywords in the game are: ambush (X), assault, bestow (X), insight, intimidate, limited,
-            no attachments, pillage, renown, shadow (X), stealth, and terminal.
+            no attachments, pillage, prized, renown, shadow (X), stealth, and terminal.
         </li>
     </ul>
 
-    <p><strong>Related:</strong> <a href="#Ambush">Ambush (X)</a>, <a href="#Insight">Insight</a>,
-        <a href="#Intimidate">Intimidate</a>, <a href="#Limited">Limited</a>,
-        <a href="#No_Attachments">No Attachments</a>, <a href="#Pillage">Pillage</a>, <a href="#Prized">Prized</a>,
-        <a href="#Renown">Renown</a>, <a href="#Stealth">Stealth</a>, <a href="#Terminal">Terminal</a></p>
+    <p><strong>Related:</strong>
+        <a href="#Ambush">Ambush</a>,
+        <a href="#Assault">Assault</a>,
+        <a href="#Bestow">Bestow</a>,
+        <a href="#Insight">Insight</a>,
+        <a href="#Intimidate">Intimidate</a>,
+        <a href="#Limited">Limited</a>,
+        <a href="#No_Attachments">No Attachments</a>,
+        <a href="#Pillage">Pillage</a>,
+        <a href="#Prized">Prized</a>,
+        <a href="#Renown">Renown</a>,
+        <a href="#Shadows">Shadows</a>,
+        <a href="#Stealth">Stealth</a>,
+        <a href="#Terminal">Terminal</a>
+    </p>
 
     <h3 id="Kill_Killed">Kill, Killed</h3>
 
