adds section and links to framework cheatsheet.

--- a/templates/Default/rulesreference.en.html.twig
+++ b/templates/Default/rulesreference.en.html.twig
@@ -2281,6 +2281,29 @@
 
     <h1 id="Appendix_I">Appendix I: Timing and Gameplay</h1>
 
+    <hr>
+
+    <p>
+        <em>Our friends at the <a href="https://agotfriendlyopen.com">Friendly Open</a> have graciously
+            provided us with a 1-page cheatsheet for the game's timing and gameplay framework.<br>
+            Please use the linked thumbnails below to access this supplement in the indicated format.<br>
+        </em>
+    </p>
+    <p>
+        <a href="https://agotfriendlyopen.com/timing" target="_blank">
+            <img src="{{ asset('images/rulesreference/timing-cheatsheet-jpg-thumbnail.jpg') }}"
+                 alt="Timing cheatsheet (JPG version)">
+        </a>
+        <a href="https://agotfriendlyopen.com/timingPDF" target="_blank">
+            <img src="{{ asset('images/rulesreference/timing-cheatsheet-pdf-thumbnail.jpg') }}"
+                 alt="Timing cheatsheet (PDF version)">
+        </a>
+    </p>
+
+    <p><em>For a detailed breakdown of the framework please keep on reading below.</em></p>
+
+    <hr>
+
     <p>Numbered items presented in the darker boxes are known as framework events. Framework events are mandatory
         occurrences dictated by the structure of the game. Yellow windows are framework events that only occur when
         playing the melee format of the game. Grey windows are special framework events that indicate the possibility of
