realigns FAQ page with v4.1 document.

--- a/templates/Default/faq.html.twig
+++ b/templates/Default/faq.html.twig
@@ -7,21 +7,23 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="page-header">
-                    <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions v4.0, 20/01/2023</h1>
+                    <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions v4.1, 22/01/2024</h1>
                     <p>This document contains card clarification, errata, rule clarifications, frequently asked
                         questions, and quick reference material for <em>A Game of Thrones: The Card Game</em>.
                         The most recent version of this document is considered a supplement to the
                         <em>A Game of Thrones: The Card Game</em> Tournament Regulations and the
                         <em>A Game of Thrones: The Card Game</em> Rules Reference.
                         All changes and additions to this document since the previous version are marked in
-                        <span class="new">red</span>.
+                        <span class="new">red (<s>strikethrough</s> for removals)</span>.
+                    </p>
+                    <p><strong>New content (v4.1): Notes and Errata</strong></p>
+                    <p>
                         <em>(A PDF version of this document can be found
-                            <a href="https://agot.cards/wp-content/uploads/2023/01/GOT_FAQ_v4.0-1.pdf"
+                            <a href="https://agot.cards/wp-content/uploads/2024/01/GOT_FAQ_v4.1.pdf"
                                title="PDF version of this FAQ" target="_blank">here</a>).
                         </em>
                     </p>
-                    <p>New content (v4.0): Rulings and Clarifications</p>
-                 </div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -140,6 +142,27 @@
                     Should read: &quot;Limit 1 copy per character.&quot;
                 </p>
 
+
+                <p class="new">
+                    <strong>
+                        (v4.1)
+                        <a href="{{ path('cards_zoom', { card_code: "02054" }) }}" class="new">The Silver Steed</a>
+                        <em>(The King's Peace, 54)</em>
+                    </strong>
+                    <br>
+                    Should read: &quot;&hellip;Then, you may initiate an additional power challenge this phase.&quot;
+                </p>
+
+                <p class="new">
+                    <strong>
+                        (v4.1)
+                        <a href="{{ path('cards_zoom', { card_code: "20052" }) }}" class="new">The Many-Faced God</a>
+                        <em>(Hear My Words, 52)</em>
+                    </strong>
+                    <br>
+                    Should read: &quot;&hellip;choose a character you control and a player&hellip;&quot;
+                </p>
+
                 <h2 id="Definitions_and_Terms">Definitions and Terms</h2>
 
                 <p>This section provides definitions for important terms that serve a precise function in the game. The
@@ -165,7 +188,7 @@
                 <p>If derived information is dependent on a player's previous decision or action, he or she must answer
                     truthfully when asked about that decision or action. For example, Steph chooses Military when
                     she reveals <a href="{{ path('cards_zoom', { card_code: "01008" }) }}">Calm Over
-                    Westeros</a> (Core Set, 8). During the Challenge Phase, Bryan forgets and asks Steph which
+                        Westeros</a> (Core Set, 8). During the Challenge Phase, Bryan forgets and asks Steph which
                     challenge type she chose for Calm Over Westeros. Steph must answer honestly that she chose Military.
                 </p>
 
@@ -496,15 +519,15 @@
                         (Flight of Crows, 82) is played on the Hedge Knight, it will no longer have the <em>Knight</em>
                         trait.</em></p>
 
-                <h4 id=Characters_contributing_their_STR" class="new">(2.10) Characters contributing their STR</h4>
+                <h4 id=Characters_contributing_their_STR">(2.10) Characters contributing their STR</h4>
 
-                <p class="new">A character may contribute its STR to a challenge in one of two ways: by participating in
+                <p>A character may contribute its STR to a challenge in one of two ways: by participating in
                     that challenge as an attacker or defender; or, by the effects of a card ability. Some card abilities
                     may cause a character to contribute its STR to a player's side during a challenge without affecting
                     the participating status of that character.
                 </p>
 
-                <ul class="new">
+                <ul>
                     <li>When STR is compared to determine the winner of a challenge (Step 4.2.2), the STR of any
                         character that is contributing its STR to a player's side during that challenge is added to that
                         player's total. Only add each character's STR once, even if a character contributes its STR from
@@ -520,7 +543,7 @@
                         takes precedence over any card ability or framework effect that says the opposite.</li>
                 </ul>
 
-                <p class="new"><em>For example: During a military challenge, Dennis uses the ability of
+                <p><em>For example: During a military challenge, Dennis uses the ability of
                         <a href="{{ path('cards_zoom', { card_code: "23018" }) }}">Anya Waynwood</a>
                         (As High as Honor, 18) to have Richard's
                         <a href="{{ path('cards_zoom', { card_code: "01085" }) }}">Grand Maester Pycelle</a>
