--- a/templates/Search/display-spoiler.html.twig
+++ b/templates/Search/display-spoiler.html.twig
@@ -19,6 +19,9 @@
                             {% include 'Search/card-faction.html.twig' %}
                             {% include 'Search/card-info.html.twig' %}
                             {% include 'Search/card-text.html.twig' %}
+                            {% if card.errataed %}
+                                {% include 'Search/card-errata-short.html.twig' %}
+                            {% endif %}
                             {% include 'Search/card-flavor.html.twig' %}
                             {% include 'Search/card-illustrator.html.twig' %}
                             {% include 'Search/card-pack.html.twig' %}
