--- a/templates/Search/display-card.html.twig
+++ b/templates/Search/display-card.html.twig
@@ -24,15 +24,16 @@
                                     {% include 'Search/card-faction.html.twig' %}
                                     {% include 'Search/card-info.html.twig' %}
                                     {% include 'Search/card-text.html.twig' %}
+                                    {% if card.errataed %}
+                                        {%  include 'Search/card-errata-short.html.twig' %}
+                                    {% endif %}
                                     {% include 'Search/card-flavor.html.twig' %}
                                     {% include 'Search/card-illustrator.html.twig' %}
                                     {% include 'Search/card-pack.html.twig' %}
                                 </div>
                             </div>
                             {% if card.errataed %}
-                                <p>
-                                    <strong>{{ "card.info.errataed_long" | trans({"%url%":  path("faq", {"_fragment": "Card_Errata"})}) | raw }}</strong>
-                                </p>
+                                {%  include 'Search/card-errata-long.html.twig' %}
                             {% endif %}
                             <p>Link:
                                 <a href="{{ path('decklists_list',{type:'find',_locale:app.request.locale,'cards[]':card.code}) }}">Decklists</a>
