better search syntax examples.

--- a/templates/Default/syntax.html.twig
+++ b/templates/Default/syntax.html.twig
@@ -28,12 +28,12 @@
           </li>
           <li>additionally you can combine <b>conditions</b> with a pipe (<code>|</code>) which acts as an "or" (logical) operator:
             <ul>
-              <li><code>viper|01109|x:win</code> – <em>gets any card with "viper" in its name, the code "01109", or with "win" in its text</em></li>
+              <li><code>f:baratheon|lannister k:lord|lady</code> – <em>gets all Baratheon or Lannister cards with the Lord or Lady trait</em></li>
             </ul>
           </li>
           <li>Note that <b>conditions</b> containing spaces must be surrounded with quotation marks:
             <ul>
-              <li><code>"red viper"|01109|x:"win a challenge"</code></li>
+              <li><code>"x:"win a challenge"</code> – <em>gets all cards with &quot;win a challenge&quot; in their text</em></li>
             </ul>
           </li>
         </ul>
