Improve search syntax docs

--- a/templates/Default/advanced_search.html.twig
+++ b/templates/Default/advanced_search.html.twig
@@ -24,7 +24,7 @@
     <ul>
       <li><code>viper|01109|x:win</code> – <em>gets any card with "viper" in its name, the code "01109", or with "win" in its text</em></li>
     </ul>
-    <li>Note that <b>conditions</b> containing spaces must be surrounded with quotation marks:</li>
+    <li>Note that <b>conditions</b> containing spaces or special characters must be surrounded with quotation marks:</li>
     <ul>
       <li><code>"red viper"|01109|x:"win a challenge"</code></li>
     </ul>
@@ -93,7 +93,8 @@
           <li><code>f:tyrell|martell o&lt;2</code> searches for all Tyrell or Martell cards with cost less than 2</li>
           <li><code>t:attachment k!condition|title|"The Seven"</code> searches for all Attachments that are not Condition, Title or The Seven</li>
           <li><code>f:lannister l:0</code> searches for all Lannister non-loyal cards</li>
-          <li><code>x:"win a [power] challenge"</code> returns all the cards with "win a POWER challenge" text where POWER is icon (same works for faction icons)</li>
+          <li><code>x:"win a [power] challenge"</code> searches for all the cards with "win a POWER challenge" text where POWER is icon (same works for faction icons)</li>
+          <li><code>x:"&lt;i&gt;King&lt;/i&gt;"|"&lt;i&gt;Queen&lt;/i&gt;"</code> searches for all the cards that refer to the King or Queen trait in their text (regardless of the cards' actual traits)</li>
           <li><code>t:plot k!kingdom|edict n>5</code> searches for all Plots that are neither Kingdom nor Edict and have income greater than 5</li>
           <li><code>t:plot k:Scheme x:"When Revealed"</code> searches for all Scheme Plot cards with When Revealed effect</li>        
         </ul>
@@ -112,11 +113,14 @@
       <h4 class="subheader">Searching based on card's text</h4>
       <div class="body row">
         <p>This operand searches for a substring in a card's text.</p>
-        <p>It is possible to include Faction and Challenge icons in search using square brackets e.g. [martell], [power], etc..</p>
+        <p>It is possible to include Faction and Challenge icons in search using square brackets e.g. [martell], [power]</p>
+        <p>It is possible to specify a search word as a trait reference using double quotes enclosed HTML <code>i</code> tag, e.g. "&lt;i&gt;King&lt;/i&gt;"</p>
         <ul>
           <li><code>x:"take control"</code> – gets all cards with "take control in it"</li>
           <li><code>x:"interrupt:" x:killed</code> – gets cards with Interrupt to being killed</li>
-          <li><code>x:king x!attacking|kingdom|kings</code> – gets (mostly) cards that interact with King trait</li>
+          <li><code>x:king</code> – gets cards that interact with the King trait, but also cards that mention attac<em>king</em></li>
+          <li><code>x:"&lt;i&gt;King&lt;/i&gt;"</code> – gets cards that interact with the King trait</li>
+          <li><code>x:"attacking &lt;i&gt;King&lt;/i&gt;"</code> – gets cards that refer to an attacking King</li>
         </ul>
       </div>
     </div>
