creates banner alerts system.
this adds a CLI interface for managing banner alerts that appear on the frontpage.

--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -3,8 +3,8 @@
 
 {% block body %}
     <div class="main container">
-
         {% include 'alerts.html.twig' %}
+        {% include 'banner-alerts.html.twig' %}
         <h1 class="site-title hidden-xs">Thr<span style="position:relative">o<span class="icon icon-power"
                                                                                    style="position:absolute;left: .65em;top: 1.2em;font-size: 30%;"></span></span>nesDB
         </h1>
