add banner-alerts to "my decks" page, if available.

--- a/templates/Builder/decks.html.twig
+++ b/templates/Builder/decks.html.twig
@@ -25,6 +25,7 @@
     <div class="main white container">
 
         {% include 'alerts.html.twig' %}
+        {% include 'banner-alerts.html.twig' %}
         <div class="row">
 
             <!-- Right-side column -->
