--- a/templates/Search/display-card.html.twig
+++ b/templates/Search/display-card.html.twig
@@ -30,6 +30,7 @@
                                     {% include 'Search/card-flavor.html.twig' %}
                                     {% include 'Search/card-illustrator.html.twig' %}
                                     {% include 'Search/card-pack.html.twig' %}
+                                    {% include 'Search/card-rarity.html.twig' %}
                                 </div>
                             </div>
                             {% if card.errataed %}
@@ -62,4 +63,3 @@
     </div>
 
 {% endblock %}
-
