updates rarity values in syntax doc.

--- a/templates/Default/syntax.html.twig
+++ b/templates/Default/syntax.html.twig
@@ -407,7 +407,7 @@
             <div class="body row">
               <p>This operand finds all cards with a given rarity.</p>
               <p>
-                Acceptable values are <code>common</code>, <code>uncommon</code>, <code>rare</code>, <code>mythic</code>, and <code>special</code>.
+                Acceptable values are <code>common</code>, <code>uncommon</code>, <code>rare</code>, <code>hidden</code>, and <code>starter</code>.
                 Please note that only cards in Draft packs may have a rarity value.
               </p>
               <ul>
