--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,13 @@ ol {
     line-height: 1.5;
     min-width: 69px;
 }
+.modal .qty-select {
+    font-size: 14px;
+    padding: 6px 12px;
+    min-width: 90px;
+    height: auto;
+    line-height: 1.5;
+}
 
 /** Description panel **/
 div#description img,
