--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,6 +62,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{ path('rulesreference') }}">{{ 'nav.rulesreference' | trans }}</a></li>
                                 <li><a href="{{ path('faq') }}">{{ 'nav.faq' | trans }}</a></li>
+                                <li><a href="{{ path('draft') }}">{{ 'nav.draft' | trans }}</a></li>
                                 <li>
                                     <a href="{{ path('restrictions') }}">{{ 'nav.restrictions' | trans }}</a>
                                 </li>
